--- a/src/lang/ar/index.pug
+++ b/src/lang/ar/index.pug
@@ -18,17 +18,17 @@ block main
 
   center
     table
-      tr.v
-        th: span name
+      tr.vs
+        th name
         th: span transliteration
-        th: span IPA
-        th: span final
-        th: span medial
-        th: span initial
-        th: span isolated
-        th: span roman
-        th: span hebrew
-        th: span phoenician
+        th IPA
+        th final
+        th medial
+        th initial
+        th isolated
+        th roman
+        th hebrew
+        th phoenician
       tr
         td 'alif
         td a
