--- a/src/lang/hy/index.pug
+++ b/src/lang/hy/index.pug
@@ -12,84 +12,83 @@ block main
 			Բոլոր մարդիկ ծնվում են ազատ ու հավասար իրենց արժանապատվությամբ ու իրավունքներով։ Նրանք ունեն բանականություն ու խիղճ և միմյանց պետք է եղբայրաբար վերաբերվեն։
 		textarea#1
 
-	center
-		table.c
-			tr
-				th vowel
-				td
-				td.hy i
-				td.hy e
-				td.hy a
-				td.hy o
-				td.hy u
-			tr
-				th
-				th.v: span glottal
-				th.v: span velar
-				th.v: span palatal
-				th(colspan=2).v: span dental
-				th.v: span labial
-			tr
-				th tenuis
-				td
-				td.hy k
-				td.hy ṭ
-				td.hy ŧ
-				td.hy t
-				td.hy p
-			tr
-				th aspirated
-				td
-				td.hy k'
-				td.hy ṭ'
-				td.hy ŧ'
-				td.hy t'
-				td.hy p'
-			tr
-				th voiced
-				td
-				td.hy c
-				td.hy ḍ
-				td.hy đ
-				td.hy d
-				td.hy b
-			tr
-				th fricative
-				td.hy h
-				td.hy x
-				td.hy ṣ
-				td.hy s
-				td.hy
-				td.hy f
-			tr
-				th v. fricative
-				td
-				td.hy g
-				td.hy ẓ
-				td.hy z
-				td.hy
-				td.hy w
-			tr
-				th nasal
-				td
-				td
-				td
-				td.hy n
-				td
-				td.hy m
-			tr
-				th approximant
-				td
-				td
-				td.hy j
-				td.hy l
-				td.hy y
-				td
-			tr
-				th trill
-				td
-				td
-				td
-				td
-				td r
-				td
+	table.c.center
+		tr
+			th vowel
+			td
+			td.hy i
+			td.hy e
+			td.hy a
+			td.hy o
+			td.hy u
+		tr
+			th
+			th.v glottal
+			th.v velar
+			th.v palatal
+			th(colspan=2).v dental
+			th.v labial
+		tr
+			th tenuis
+			td
+			td.hy k
+			td.hy ṭ
+			td.hy ŧ
+			td.hy t
+			td.hy p
+		tr
+			th aspirated
+			td
+			td.hy k'
+			td.hy ṭ'
+			td.hy ŧ'
+			td.hy t'
+			td.hy p'
+		tr
+			th voiced
+			td
+			td.hy c
+			td.hy ḍ
+			td.hy đ
+			td.hy d
+			td.hy b
+		tr
+			th fricative
+			td.hy h
+			td.hy x
+			td.hy ṣ
+			td.hy s
+			td.hy
+			td.hy f
+		tr
+			th v. fricative
+			td
+			td.hy g
+			td.hy ẓ
+			td.hy z
+			td.hy
+			td.hy w
+		tr
+			th nasal
+			td
+			td
+			td
+			td.hy n
+			td
+			td.hy m
+		tr
+			th approximant
+			td
+			td
+			td.hy j
+			td.hy l
+			td.hy y
+			td
+		tr
+			th trill
+			td
+			td
+			td
+			td
+			td r
+			td
